--- a/themes/hugo-cards/layouts/methods/list.html
+++ b/themes/hugo-cards/layouts/methods/list.html
@@ -5,7 +5,7 @@
   
     <div class="row pack">
 
-        {{ $paginator := .Paginate (where .Site.RegularPages "Section" "news") }}
+        {{ $paginator := .Paginate (where .Site.RegularPages "Section" "methods") }}
         {{ range $paginator.Pages }}   
             <div class="col-md-4 card">
              <a href="{{ .Permalink }}" class="index-anchor">    
