--- a/themes/hugo-cards/layouts/partials/header.html
+++ b/themes/hugo-cards/layouts/partials/header.html
@@ -15,9 +15,11 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{ .Site.BaseURL }}pages/about/">About</a></li>
-        <li><a href="{{ .Site.BaseURL }}pages/contact/">Contact</a></li>
-        <li class="dropdown">
+              <li><a href="{{ .Site.BaseURL }}news/">News</a></li>
+              <li><a href="{{ .Site.BaseURL }}methods/">Methods</a></li>
+              <li><a href="{{ .Site.BaseURL }}pages/about/">About</a></li>
+              <li><a href="{{ .Site.BaseURL }}pages/contact/">Contact</a></li>
+              <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Download <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a target="_blank" href="https://github.com/bul-ikana/hugo-cards">Project</a></li>
